[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renovate-hatch"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = []
dependencies = [
  "requests==2.30.0"
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]==6.5",
  "pytest",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy==1.0.0",
  "ruff~=0.0.243",
]

